# 3d_study

./: CMakeLists.txt  README.md  app.cpp  app.h  command_buffer.cpp  command_buffer.h  renderer.cpp  renderer.h  test.cpp
common/: log.cpp  log.h  utils.h
opengl/: gl_device_context.cpp  gl_device_context.h  gl_render_context.cpp  gl_render_context.h  gl_renderer.cpp  gl_renderer.h
win32/: main.cpp  platform.h  wgl_context.cpp  wgl_context.h
